# extract

./: README.md  pyproject.toml
src/extract/: extract.py
