[project]
name = "extract"
version = "2.0.1"
description = ""
authors = [
    {name = "j25ng", email = "jsan2861@gmail.com"},
    {name = "mingk42", email = "xoals123456t@gmail.com"},
    {name = "HaramSs", email = "haram8274@gmail.com"},
]
dependencies = [
    "requests>=2.32.3",
    "pandas>=2.2.2",
    "pyarrow>=17.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
